--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext{
+        kotlin_version = '1.3.50'
+        navigationVersion = '1.0.0-rc02'
+        supportlibVersion = '1.0.0-rc03'
+        //dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+    }
+
     repositories {
         google()
         jcenter()
